# spreadsheet-moment-proto

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierignore  .vectordb_metadata.json  ACCESSIBILITY_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  CODE_GUIDE.md  CODE_OF_CONDUCT_SPREADSHEET_MOMENT.md  COMMUNICATION_PLAN.md  COMPREHENSIVE_STATUS_20260313.md  CONTRIBUTING.md  CONTRIBUTING_SPREADSHEET_MOMENT.md  CONTRIBUTORS_SPREADSHEET_MOMENT.md  CUSTOMER_SUCCESS_AND_SUPPORT_SUMMARY.md  CUserscaseypollnsimulationsrequirements.txt  DOCKSIDE-EXAM.md  Dockerfile  Dockerfile.dev  EXECUTIVE_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  INCIDENT_RESPONSE_PLAN.md  LAUNCH_CHECKLIST.md  LAUNCH_DAY_PLAYBOOK.md  LAUNCH_STRATEGY_INDEX.md  MILESTONE_2_COMPLETION_REPORT.md  ONBOARD_ROADMAP.md  PAPER_COMPLETION_STATUS_ROUND20.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_SIMULATION_RESULTS_20260313.md  PHASE_3_COMPLETION_SUMMARY.md  POST_LAUNCH_MONITORING.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  (+39 more)
.agents/: README.md  agent-developer.md  indigenous-liaison.md  metaphor-architect.md  ml-engineer.md  privacy-analyst.md  research-synthesizer.md  safety-researcher.md  systems-architect.md
.github/: dependabot.yml  labeler.yml  (+1 more)
deployment/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
deployment/desktop/src-tauri/icons/: README.md
deployment/desktop/src-tauri/src/: database.rs  file_watcher.rs  main.rs  notifications.rs  updater.rs
deployment/desktop/src-tauri/src/commands/: clipboard.rs  database.rs  file_types.rs  fs.rs  mod.rs  notifications.rs  system.rs  updater.rs  window.rs
deployment/desktop/src-tauri/src/utils/: csv.rs  excel.rs
dev/: dev.sh  (+4 more)
(+3661 files in other folders)
